Dockerized the application with docker compose.

--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-REDIS_URL=redis://localhost:6379
+DATABASE_NAME=rails_development
+DATABASE_USERNAME=application_user
+DATABASE_PASSWORD=application_password
+POSTGRES_PASSWORD=application_database_password
+DATABASE_HOST=database
+
+REDIS_HOST=redis
+REDIS_PORT=6379
