--- a/config/database.yml
+++ b/config/database.yml
@@ -21,28 +21,24 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-development:
-  <<: *default
-  database: ApplicationTemplate_development
-
+  database: <%= ENV['DATABASE_NAME'] %>
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: ApplicationTemplate
-
+  username: <%= ENV['DATABASE_USERNAME'] %>
   # The password associated with the postgres role (username).
-  #password:
-
+  password: <%= ENV['DATABASE_PASSWORD'] %>
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
-
+  host: <%= ENV['DATABASE_HOST'] %>
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  #port: 5432
+  port: <%= ENV['DATABASE_PORT'] || '5432' %>
 
+development:
+  <<: *default
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
 
@@ -57,7 +53,6 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ApplicationTemplate_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +76,3 @@ test:
 #
 production:
   <<: *default
-  database: ApplicationTemplate_production
-  username: ApplicationTemplate
-  password: <%= ENV['APPLICATIONTEMPLATE_DATABASE_PASSWORD'] %>
