--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ require:
   - rubocop-rake
 
 AllCops:
+  NewCops: enable
   Exclude:
     - '**/tmp/**/*'
     - '**/templates/**/*'
@@ -14,38 +15,38 @@ AllCops:
     - 'bin/**/*'
     - 'config/**/*'
     - 'db/**/*'
-  Style/SymbolArray:
-    Enabled: false
+Style/SymbolArray:
+  Enabled: false
 
-  Style/AndOr:
-    Enabled: false
+Style/AndOr:
+  Enabled: false
 
-  Style/Not:
-    Enabled: false
+Style/Not:
+  Enabled: false
 
-  Style/ClassAndModuleChildren:
-    Enabled: false
+Style/ClassAndModuleChildren:
+  Enabled: false
 
-  Rails/FilePath:
-    Enabled: false
+Rails/FilePath:
+  Enabled: false
 
-  Rails/CreateTableWithTimestamps:
-    Enabled: false
+Rails/CreateTableWithTimestamps:
+  Enabled: false
 
-  Bundler/OrderedGems:
-    Enabled: false
+Bundler/OrderedGems:
+  Enabled: false
 
-  Metrics/BlockLength:
-    Enabled: false
+Metrics/BlockLength:
+  Enabled: false
 
-  Metrics/MethodLength:
-    Enabled: false
+Metrics/MethodLength:
+  Enabled: false
 
-  Metrics/AbcSize:
-    Enabled: false
+Metrics/AbcSize:
+  Enabled: false
 
-  Metrics/PerceivedComplexity:
-    Enabled: false
+Metrics/PerceivedComplexity:
+  Enabled: false
 
-  Metrics/CyclomaticComplexity:
-    Enabled: false
+Metrics/CyclomaticComplexity:
+  Enabled: false
